--- a/greenly/src/app/components/cart/cart.component.html
+++ b/greenly/src/app/components/cart/cart.component.html
@@ -91,7 +91,7 @@
         <!-- Checkout Button -->
         @if (cartData.products.length > 0) {
           <div class="checkout-section text-center mt-5">
-            <button class="btn btn-checkout" routerLink="/app/system/check-out">
+            <button class="btn btn-checkout" routerLink="/app/system/user-addresses">
               Proceed to Checkout <i class="fas fa-arrow-right ms-2"></i>
             </button>
           </div>
