--- a/greenly/src/app/components/home-admin/home-admin.component.html
+++ b/greenly/src/app/components/home-admin/home-admin.component.html
@@ -50,7 +50,7 @@
 
       <!-- Manage Orders -->
       <div class="col-md-4 col-sm-6 col-10">
-        <div class="req-card rounded-4 p-4 text-center shadow-sm h-100" routerLink="">
+        <div class="req-card rounded-4 p-4 text-center shadow-sm h-100" routerLink="/admin/manage-orders">
           <div class="mb-4 icon-box bg-success-subtle d-inline-flex align-items-center justify-content-center rounded-circle mx-auto">
             <span class="icon"><img src="./assets/order-food-svgrepo-com.svg" width="50px" height="50px" /></span>
           </div>
