--- a/greenly/src/app/components/user-profile/user-profile.component.html
+++ b/greenly/src/app/components/user-profile/user-profile.component.html
@@ -79,73 +79,96 @@
             <h4 class="text-main position-relative fs-5">My Posts</h4>
             <div class="row g-3 mt-3">
                 @for (post of blogData; track post._id) {
-                    <div class="col-md-6">
-                        <div class="inner p-3 rounded-3 text-center position-relative">
-                            <div class="dropdown position-absolute m-2">
-                                <button class="btn fs-1 text-main btn-sm dropdown-toggle" type="button"
-                                    data-bs-toggle="dropdown" aria-expanded="false">
-                                    ...
-                                </button>
-                                <ul class="dropdown-menu custom-dropdown-menu text-center">
-                                    <li class="cursor-pointer" (click)="deletePost(post._id)"><a class="dropdown-item">Delete <i
-                                                class="fa-solid fa-trash text-danger"></i></a></li>
-                                </ul>
-                            </div>
-                            <div class="d-flex align-items-center justify-content-between pe-5">
-                                <div class="user-info d-flex justify-content-center align-items-center gap-1">
-                                    <div class=" fs-5">
-                                        <img src="./assets/user-circle-1-svgrepo-com.svg" alt="user-img"
-                                            class="rounded-circle" width="30px" height="30px">
-                                    </div>
-                                    <h2 class="fs-6 pt-2  fw-semibold">{{post.createdBy.userName}}</h2>
+                <div class="col-md-6">
+                    <div class="inner p-3 rounded-3 text-center position-relative">
+                        <div class="dropdown position-absolute m-2">
+                            <button class="btn fs-1 text-main btn-sm dropdown-toggle" type="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                ...
+                            </button>
+                            <ul class="dropdown-menu custom-dropdown-menu text-center">
+                                <li class="cursor-pointer" (click)="deletePost(post._id)"><a
+                                        class="dropdown-item">Delete <i class="fa-solid fa-trash text-danger"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="d-flex align-items-center justify-content-between pe-5">
+                            <div class="user-info d-flex justify-content-center align-items-center gap-1">
+                                <div class=" fs-5">
+                                    <img src="./assets/user-circle-1-svgrepo-com.svg" alt="user-img"
+                                        class="rounded-circle" width="30px" height="30px">
                                 </div>
-                                <div class="date">
-                                    <span class="pt-2 fw-semibold text-secondary">{{post.createdAt | date: "dd MMMM yyyy, hh:mm a"}}</span>
-                                </div>
+                                <h2 class="fs-6 pt-2  fw-semibold">{{post.createdBy.userName}}</h2>
                             </div>
-                            <div class="post-content my-3">
-                                <p>{{post.content.charAt(0).toUpperCase()+post.content.slice(1)}}</p>
+                            <div class="date">
+                                <span class="pt-2 fw-semibold text-secondary">{{post.createdAt | date: "dd MMMM yyyy,
+                                    hh:mm a"}}</span>
                             </div>
                         </div>
+                        <div class="post-content my-3">
+                            <p>{{post.content.charAt(0).toUpperCase()+post.content.slice(1)}}</p>
+                        </div>
                     </div>
+                </div>
                 }@empty {
-                    <div class="text-center">
-                        <h3 class="fs-4 special-font text-danger">You haven't posted anything yet, let's get started with your first post!</h3>
-                        <button class="btn btn-success mt-3" routerLink="/app/system/blog">Go to Blog <i class="fa-solid fa-arrow-up-right-from-square"></i></button>
-                    </div>
+                <div class="text-center">
+                    <h3 class="fs-4 special-font text-danger">You haven't posted anything yet, let's get started with
+                        your first post!</h3>
+                    <button class="btn btn-success mt-3" routerLink="/app/system/blog">Go to Blog <i
+                            class="fa-solid fa-arrow-up-right-from-square"></i></button>
+                </div>
                 }
             </div>
         </div>
         <div class="user-orders mt-5">
-            <h4 class="text-main position-relative fs-5">My Orders</h4>
+            <h4 class="text-main position-relative fs-5 mb-5">My Orders</h4>
             <table class="table table-light border border-1 rounded-3 table-hover mt-3">
                 <thead>
                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">First</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
+                        <th scope="col">Order ID</th>
+                        <th scope="col">Date</th>
+                        <th scope="col">Items</th>
+                        <th scope="col">Total</th>
+                        <th scope="col">Status</th>
+                        <th scope="col">Shipping Address</th>
                     </tr>
                 </thead>
                 <tbody>
+                    @for (order of ordersData; track order._id; let i = $index) {
                     <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
+                        <td class="text-nowrap">{{i+1}}</td>
+                        <td>{{order.createdAt | date:'shortDate'}}</td>
+                        <td>
+                            <div class="d-flex flex-column">
+                                @for (item of order.items; track item._id) {
+                                <span>{{item.quantity}} × {{item.productId.name}}</span>
+                                }
+                            </div>
+                        </td>
+                        <td>{{order.amount | currency:"GBP" }}</td>
+                        <td>
+                            <span class="badge" [ngClass]="{
+            'bg-primary': order.statusofpayment === 'shipped',
+            'bg-success': order.statusofpayment === 'delievered',
+            'bg-secondary': order.statusofpayment === 'pending'
+          }">
+                                {{order.statusofpayment}}
+                            </span>
+                        </td>
+                        <td>
+                            <div class="d-flex flex-column small">
+                                <span>{{order.shippingAddress.street}}, {{order.shippingAddress.building}}</span>
+                                <span>{{order.shippingAddress.city}}, {{order.shippingAddress.state}}</span>
+                                <span>{{order.shippingAddress.postalcode}}</span>
+                                <span class="text-nowrap">📞 {{order.phone}}</span>
+                            </div>
+                        </td>
                     </tr>
+                    } @empty {
                     <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>fat</td>
+                        <td colspan="7" class="text-center py-4">No orders found</td>
                     </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>John</td>
-                        <td>Doe</td>
-                        <td>social</td>
-                    </tr>
+                    }
                 </tbody>
             </table>
         </div>
